USADOS EN FRONT

--- a/index.html
+++ b/index.html
@@ -314,15 +314,55 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/1.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										SSANGYONG
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ACTYON SPORT 4X4
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$ 5.890.000
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/usados_front/2.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										MAZDA 
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										 2 HB
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$ 5.190.000
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/usados_front/3.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										SUZUKI 
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										CELERIO
 									</p>
 								</div>
 								<div class="destacado-precio">
@@ -334,80 +374,40 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/4.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										CHEVROLET
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										SPARK GT 2014
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 3.790.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/5.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										NISSAN
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										TIIDA DRIVE 2015
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
+										$ 5.390.000
 									</p>
 								</div>
 							</div>
