--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 3.890.000
 									</p>
 								</div>
 							</div>
@@ -419,100 +419,100 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/6.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										CHEVROLET
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										SAIL NB 1.4 2014
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 3.700.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/7.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										RENAULT
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										KOLEOS DINAMIQUE 2.5 AT 2012
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/8.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										PEUGEOT
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										 PARTNER MAXI 1.6 HDI 90HP NAV 2015
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.890.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/9.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										VOLVO
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										C30 UNLIMITED 2.0 2011
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.980.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/usados_front/10.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										HYUNDAI
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ACCENT RB 1.4 GL AC 2AB 2012
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.690.000
 									</p>
 								</div>
 							</div>
