--- a/nuevos.html
+++ b/nuevos.html
@@ -335,7 +335,7 @@
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/5.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Forde
+										Ford
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
