--- a/nuevos.html
+++ b/nuevos.html
@@ -484,100 +484,100 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/11.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										CADENZA EX 8AT GDI
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 25.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/12.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVA CARENS EX GSL 7P 6MT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 13.590.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/13.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVO CERATO 5 EX 6MT AC ABS
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 9.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/14.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVO CERATO EX 6MT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 11.790.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/15.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										FRONTIER C/C 2.5 6MT ABS (COD. 2010)
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 16.390.000
 									</p>
 								</div>
 							</div>
@@ -589,7 +589,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/16.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
 										Challenger
@@ -609,7 +609,7 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/17.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
 										Challenger
@@ -629,7 +629,7 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/18.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
 										Challenger
@@ -649,7 +649,7 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/19.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
 										Challenger
@@ -669,7 +669,7 @@
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/20.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
 										Challenger
