--- a/nuevos.html
+++ b/nuevos.html
@@ -592,17 +592,17 @@
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/16.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVA GRAND CARNIVAL EX 3.3 GSL 6AT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 22.590.000
 									</p>
 								</div>
 							</div>
@@ -612,17 +612,17 @@
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/17.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										MOHAVE EX DSL 8AT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 29.490.000
 									</p>
 								</div>
 							</div>
@@ -632,17 +632,17 @@
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/18.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVO MORNING C MT 1.0 ABS
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 5.690.000
 									</p>
 								</div>
 							</div>
@@ -652,17 +652,17 @@
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/19.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVO RIO 4 C LX 6MT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 7.390.000
 									</p>
 								</div>
 							</div>
@@ -672,17 +672,17 @@
 								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/20.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Kia
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										NUEVO RIO 5 C EX 6MT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 7.890.000
 									</p>
 								</div>
 							</div>
@@ -716,205 +716,100 @@
 					<div class="row">
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/21.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Jeep
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										GRAND CHEROKEE LAREDO 4X2
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										 $ 23.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/22.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Jeep
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										CHEROKEE LONGITUDE 4X2
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 18.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/23.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Jeep
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										WRANGLER SPORT AT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										 $ 30.490.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/24.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Jeep
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										ALL NEW COMPASS SPORT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
+										$ 13.990.000
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col">
 							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<img class="img-fluid" src="assets/images/autos/nuevos_nuevos/25.png"> <!-- foto del auto destacado -->
 								<div class="destacado-texto-principal">
 									<h4>
-										Challenger
+										Jeep
 									</h4>
 								</div>
 								<div class="destacado-texto-detalle">
 									<p>
-										auto tipo 1
+										RENEGADE SPORT 4X2 MT
 									</p>
 								</div>
 								<div class="destacado-precio">
 									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="carousel-item destacados-single">
-					<div class="row">
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col">
-							<div class="destacado-card">
-								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
-								<div class="destacado-texto-principal">
-									<h4>
-										Challenger
-									</h4>
-								</div>
-								<div class="destacado-texto-detalle">
-									<p>
-										auto tipo 1
-									</p>
-								</div>
-								<div class="destacado-precio">
-									<p>
-										$$$$$
+										$ 10.990.000
 									</p>
 								</div>
 							</div>
